# ChangeLog for xfce-extra/xfce4-pulseaudio-plugin
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-pulseaudio-plugin/ChangeLog,v 1.4 2015/05/11 17:52:34 mgorny Exp $

*xfce4-pulseaudio-plugin-0.2.2-r1 (11 May 2015)

  11 May 2015; Michał Górny <mgorny@gentoo.org>
  +xfce4-pulseaudio-plugin-0.2.2-r1.ebuild,
  -xfce4-pulseaudio-plugin-0.2.2.ebuild:
  Future-add libxfce4ui[gtk3(+)] dep.

  06 Apr 2015; Michael Palimaka <kensington@gentoo.org>
  xfce4-pulseaudio-plugin-0.2.2.ebuild:
  Fix typo in DESCRIPTION.

  05 Apr 2015; Michał Górny <mgorny@gentoo.org>
  xfce4-pulseaudio-plugin-0.2.2.ebuild:
  Post-commit cleanup.

*xfce4-pulseaudio-plugin-0.2.2 (05 Apr 2015)

  05 Apr 2015; Michał Górny <mgorny@gentoo.org> +metadata.xml,
  +xfce4-pulseaudio-plugin-0.2.2.ebuild:
  Introduce the PulseAudio volume control plugin for xfce4-panel, bug #541308.