@@ -1,0 +1,13 @@
+DEFINED_PHASES=configure install postinst postrm preinst prepare setup
+DEPEND=>=dev-libs/glib-2.24.0:= media-sound/pulseaudio:= >=x11-libs/gtk+-3.6.0:3= >=xfce-base/libxfce4ui-4.11.0:=[gtk3(+)] >=xfce-base/libxfce4util-4.9.0:= >=xfce-base/xfce4-panel-4.11.0:= >=xfce-base/xfconf-4.6.0:= keybinder? ( dev-libs/keybinder:3= ) libnotify? ( x11-libs/libnotify:= ) dev-util/intltool virtual/pkgconfig >=sys-apps/sed-4
+DESCRIPTION=A panel plug-in for PulseAudio volume control
+EAPI=5
+HOMEPAGE=https://github.com/andrzej-r/xfce4-pulseaudio-plugin
+IUSE=debug keybinder libnotify
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=>=dev-libs/glib-2.24.0:= media-sound/pulseaudio:= >=x11-libs/gtk+-3.6.0:3= >=xfce-base/libxfce4ui-4.11.0:=[gtk3(+)] >=xfce-base/libxfce4util-4.9.0:= >=xfce-base/xfce4-panel-4.11.0:= >=xfce-base/xfconf-4.6.0:= keybinder? ( dev-libs/keybinder:3= ) libnotify? ( x11-libs/libnotify:= )
+SLOT=0
+SRC_URI=mirror://xfce/src/panel-plugins/xfce4-pulseaudio-plugin/0.2/xfce4-pulseaudio-plugin-0.2.3.tar.bz2
+_eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	eutils	9fb270e417e0e83d64ca52586c4a79de	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	xfconf	eee85b2bc9e9826f5a9c1349a75a69fe
+_md5_=c6ba299ef23866db4647dd3929de76af
