@@ -2,25 +2,27 @@
 Hash: SHA256
 
 DIST xfce4-pulseaudio-plugin-0.2.2.tar.bz2 324250 SHA256 67c04ab9a3932d74480f42461aafe779b68de4388db3f7546966a3967376c6d8 SHA512 d7640637de7fb295bea0b1d29e8b75e854926aab96847018a60a86f6fdb6a408328688285767ee1b34109df06bd7fb1ee907798b7f60bcbb095294d743e1b32f WHIRLPOOL 10b5df905e7d3ff6beec9bc11c0d572ae38635fc18c114ad42a10e61e0a0e24c1bc2813b08926896f1f529a053c021e13a5af291158e989cf3ce4ef4579fbdbf
+DIST xfce4-pulseaudio-plugin-0.2.3.tar.bz2 306349 SHA256 e82836bc8cf7d905b4e60d43dc630ba8e32dea785989700c71d4aeee9f583b33 SHA512 9440e68b81be0845be4da88154db6e407891d5cc7504e46bc5dd7deac36bfba7354b38b7658e099fdd40fe581bd6e549ae1c6655a2d05df1f297ec944db47cc6 WHIRLPOOL e1fef58d0a510b9121a36e131f72f5b8333bf86ee8c50ece978ca66697cd8fbf21903d35d67639b4ec2dd2493c18f8603efe14ebd51626168721807ad5091143
 EBUILD xfce4-pulseaudio-plugin-0.2.2-r1.ebuild 988 SHA256 b02134d75fc9ddd45d8295d41eaa2a09750abfc94f60634f00198fb90648d82c SHA512 f6d84f4493ec70e3da9fb201054c7edc47ed76ac984d9032dd569a556b414f3ef8f416cba30d30a2c22295a0d696d14f770e46641d5add6bd8de63dcee43505d WHIRLPOOL 62611863f25145755a53208986375f19194ef75266bcf9e2bffc59089d90dc311245ed8d3c26a2c1e6ad12d262764d8df07ffdc794665375703b64d0ab8daa7c
-MISC ChangeLog 933 SHA256 1b7ff3965b439054c87adf2e2fd2144686d45f14b0bdde62ea50f65470205a3f SHA512 ac02bfcc89fa693561cd232fbac143e9a9aa25a47a1c1c9dc09dc5b386bcd3c283beca886221e2550a3309571c37290cb48064d59eeabc2bd935ed0200fcfce5 WHIRLPOOL 9ed2c46f7d45c68957933e888b736b10ffc9cb78dbd961db62a4185d2395c34ad9273a627e337867d6ab8dffb8eed4787db1ba21d7e308214250f73421de8877
+EBUILD xfce4-pulseaudio-plugin-0.2.3.ebuild 1058 SHA256 6f643f146932a1d6dde1239b86ac815793e7ea7b227e33805a1e48e3305e6e80 SHA512 d97ba3644febcb028aedfa0f3100efbeff115d4bfb45692d7c87c95bfba448ab2954fc56807df58ac602c906d0175acb496a8c7bee5578967928434c3bdcc3a9 WHIRLPOOL a2dd8544a12f5c2b1faabefb14068b6728a4ab58fae27d43130576e0a463593dbd1ce3064da3be4437127aa0bdc127bd34918d83b3295f2df74bb3549ca90bca
+MISC ChangeLog 1111 SHA256 5a74d5b2c7f357e3c5ccc64e3649e2c0632ea14c47e370a385561817fff3a89d SHA512 7967037f0fe60e178da913883b1520c3afbbbb2139290172cab753dc99263cbbaed9b49201d8abf900fc1338a5b2b3a94a0d325ebffb9a0e4c7593897fe67fc3 WHIRLPOOL 61984147161eb63156d86db80459f883b4a9428521205ebf20e86952bcff9b07c86798f918c2fe6e1bb5ee1ac0bf2115c44d04fc7b210164e76fd7bb834f3f92
 MISC metadata.xml 276 SHA256 aeeb319b229d8fc8d784ec0180ef05905887a5d8c872f85bd53459b8aff6c832 SHA512 7672b2fee920d0a1919880911a7a9edbe1b0cf88f49bfd7cef7aa392acc03f9d8dac78b8e6820f2ecd6fe6442957bb83a907facc1ad139d6d90a8fbe5a41b7a3 WHIRLPOOL b2f488fcc58b1bbd523825c202ec896a4a845920d89611d40771c1c64fd8735cd2b33e7a70fd4c772614716377093dd54031cb19e0e0d0d452b0fadd05d7a7b8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJVUOxjXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVUXtYXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOdnUQALMyK2EetKz0otef2zch9otD
-C6QqJEYbR8FkcurA0hHJDHBYVQQZvVjL3iI0sQQxKwEMB3TH3TGrJZvBP3/PmVII
-ceQUjaPoMEPS/J5Xq7G0nDbVlRHp52MuMuLbseZggKy3txHUOyu3ddG6OXz5hTIb
-B4XQcKnhxtTp0AbHIJq73FPji+s9KoQYMoaZ0N8aqxwjG3lz+JGucF7hbf+dq4V/
-EgPgVdYv9F3+603IZhHMuKAg5eGPzEWTFLHHTECUQZieuOg21TNSU1fz06HCpTee
-pim83uaEMOfn5d+qFdCrg97uK2GAq3IgtsEslEgAAk8qfCW30PQnL5jJ6uBHosIp
-fFOgvCoa+Yx4Lm+uSEivPUmhE9ASYns5UIutrLP+xYo9VG5j7Lii1zD+wqsKiNwt
-4ecS8kHtMx8D80FSxCE6SUwbFJ1+xg667sHJnOZFoeBbv+kiP1+pzRZKbpCV63ZR
-yVH22DhybHf+Ori+WQL9fsP88O9pd2dNCvQDeR1q18wVAfI2k2UskqYZPFRIhPRT
-SHIq+2jPkZNawfimtpNuhPHTNQI/ihAQzA/VW0FVmB/Ixpgut3GOOyJqhPabTqnt
-YEt4KoIBWKB0yIashImnUyYk3JiXr4jLOmGa1LkLxiY7jNDdLL+hbSRpsTYsVQ1p
-SerZVMVemCYVJaJuXJ7U
-=lpCX
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOBk8P/1i9g2ncraJleLxQUnGUR591
+X/2cVbbLpp1WNEQeRa9v0LH69vdcwU56A3hjQrzIl3Z6ZFP/CqwNnPcJoJJ424BR
+uGqJ44Mhaazk/PXWZpj2pG+/Pq+f1sghYobc5TSE9mGPp6wGK8ckT1pd23DQZsUB
+EV9VL1CUhJQeyqIJpZLcxxNFzUT0jiCdJcDK5kSODzGSxpfHECZIlZUDyedCYDjW
+bNPL3GK5X1as/HetmnZuM6WnUqKi1LYfILQqlsRd013HLHo4RTRnW8ooqaZh/PEz
+8uSupUZuY362nUoAsSW3FjD9C9EzZcRHJgEAUq7eFDI7s7Sy3csFoba56v3Be5pE
+lm8GGP8vieBBfcJt2Nf8FMyPPjycPnSRFo4e2fAKpKk3VeOBPjNolsAD4RtAed7d
+aRDpZ/MuFr1gkYtg+3gp/0bMF/znY14dq75J2pW1Reb4Xim//NmoNUpXkk6+6onS
+flVsPPz4wkUzv3lgqJVZHD5IPE98iip2Bwy86s6ytpjuI+akzjsf10PFX7md+pd8
+uwQuTEEylzR60hyW6o4YZ6W/yvxGj4UZfOlnis1ISAUrL3mnFGLRSIxoUDNqKurK
+vJ9iscZJ3Hr27Az8NAjwseHx32jGGVr0PtGDhyZDwv5htguquWixRAGnx+H7XHfF
+HfLg6Vm0gl4P3DOZ512K
+=sIEg
 -----END PGP SIGNATURE-----
